// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brand should render correctly with link not provided 1`] = `
.emotion-0 {
  background-color: #B80000;
  height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
}

@media (min-width: 15rem) {
  .emotion-0 {
    height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    height: 4rem;
  }
}

.emotion-2 {
  height: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 63rem;
  margin: 0 auto;
}

@media (max-width: 14.9375rem) {
  .emotion-2 {
    display: block;
  }
}

.emotion-4 {
  box-sizing: content-box;
  color: #FFFFFF;
  fill: currentColor;
  height: 1.25rem;
}

@media (min-width: 25rem) {
  .emotion-4 {
    height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    height: 1.875rem;
  }
}

@media screen and (-ms-high-contrast: active),print {
  .emotion-4 {
    fill: windowText;
  }
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-5"
        focusable="false"
        height="32"
        id="brandSvgHeader"
        viewBox="0 0 167.95 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill-rule="evenodd"
        >
          <path
            d="M84.32"
          />
        </g>
      </svg>
      <span
        class="emotion-6"
        id="BrandLink-null"
        role="text"
      >
        <span
          lang="en-GB"
        >
          Default Brand Name, 
        </span>
        <span>
          Service
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Brand should render correctly with link provided 1`] = `
.emotion-0 {
  background-color: #B80000;
  height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
}

@media (min-width: 15rem) {
  .emotion-0 {
    height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    height: 4rem;
  }
}

.emotion-2 {
  height: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 63rem;
  margin: 0 auto;
}

@media (max-width: 14.9375rem) {
  .emotion-2 {
    display: block;
  }
}

.emotion-4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  bottom: 0.125rem;
  padding-top: 0.125rem;
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0.25rem solid #FFFFFF;
  margin-bottom: -0.25rem;
}

.emotion-4:focus-visible::after {
  content: '';
  position: absolute;
  top: 0;
  left: -0.1875rem;
  bottom: 0;
  right: -0.1875rem;
  border-top: 0.25rem solid #FFFFFF;
  outline: 0.25rem solid #FFFFFF;
}

.emotion-6 {
  box-sizing: content-box;
  color: #FFFFFF;
  fill: currentColor;
  height: 1.25rem;
}

@media (min-width: 25rem) {
  .emotion-6 {
    height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    height: 1.875rem;
  }
}

@media screen and (-ms-high-contrast: active),print {
  .emotion-6 {
    fill: windowText;
  }
}

.emotion-8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <a
        aria-labelledby="BrandLink-null"
        class="focusIndicatorRemove emotion-4 emotion-5"
        href="https://www.bbc.co.uk/news"
      >
        <svg
          aria-hidden="true"
          class="emotion-6 emotion-7"
          focusable="false"
          height="32"
          id="brandSvgHeader"
          viewBox="0 0 167.95 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill-rule="evenodd"
          >
            <path
              d="M84.32"
            />
          </g>
        </svg>
        <span
          class="emotion-8"
          id="BrandLink-null"
          role="text"
        >
          <span
            lang="en-GB"
          >
            Default Brand Name, 
          </span>
          <span>
            Service
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Brand should render correctly with no service Localised Name 1`] = `
.emotion-0 {
  background-color: #B80000;
  height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
}

@media (min-width: 15rem) {
  .emotion-0 {
    height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    height: 4rem;
  }
}

.emotion-2 {
  height: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 63rem;
  margin: 0 auto;
}

@media (max-width: 14.9375rem) {
  .emotion-2 {
    display: block;
  }
}

.emotion-4 {
  box-sizing: content-box;
  color: #FFFFFF;
  fill: currentColor;
  height: 1.25rem;
}

@media (min-width: 25rem) {
  .emotion-4 {
    height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    height: 1.875rem;
  }
}

@media screen and (-ms-high-contrast: active),print {
  .emotion-4 {
    fill: windowText;
  }
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-5"
        focusable="false"
        height="32"
        id="brandSvgHeader"
        viewBox="0 0 167.95 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill-rule="evenodd"
        >
          <path
            d="M84.32"
          />
        </g>
      </svg>
      <span
        class="emotion-6"
        id="BrandLink-null"
      >
        BBC News
      </span>
    </div>
  </div>
</div>
`;

exports[`Brand should render correctly with transparent borders 1`] = `
.emotion-0 {
  background-color: #B80000;
  height: 2.75rem;
  width: 100%;
  padding: 0 0.5rem;
  border-top: 0.0625rem solid transparent;
  border-bottom: 0.0625rem solid transparent;
}

@media (min-width: 15rem) {
  .emotion-0 {
    height: 3.75rem;
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-0 {
    height: 3.75rem;
    padding: 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    height: 4rem;
  }
}

.emotion-2 {
  height: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 63rem;
  margin: 0 auto;
}

@media (max-width: 14.9375rem) {
  .emotion-2 {
    display: block;
  }
}

.emotion-4 {
  box-sizing: content-box;
  color: #FFFFFF;
  fill: currentColor;
  height: 1.25rem;
}

@media (min-width: 25rem) {
  .emotion-4 {
    height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    height: 1.875rem;
  }
}

@media screen and (-ms-high-contrast: active),print {
  .emotion-4 {
    fill: windowText;
  }
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-5"
        focusable="false"
        height="32"
        id="brandSvgHeader"
        viewBox="0 0 167.95 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill-rule="evenodd"
        >
          <path
            d="M84.32"
          />
        </g>
      </svg>
      <span
        class="emotion-6"
        id="BrandLink-null"
      >
        BBC News
      </span>
    </div>
  </div>
</div>
`;
